@@ -117,8 +117,8 @@ A <a href="http://developer.gnome.org/vte/unstable/VteTerminal.html">VteTerminal
 <tr><td class="wiki"> space-expand </td><td class="wiki"> Pack widget expanding into space </td><td class="wiki"> <code>true</code> or <code>false</code> </td><td class="wiki"> </td></tr>
 <tr><td class="wiki"> space-fill </td><td class="wiki"> Pack widget filling space </td><td class="wiki"> <code>true</code> or <code>false</code> </td><td class="wiki"> </td></tr>
 <tr><td class="wiki"> block-function-signals </td><td class="wiki"> Block signal emissions from functions </td><td class="wiki"> <code>true</code> or <code>false</code> </td><td class="wiki"> </td></tr>
-<tr><td class="wiki"> font-desc<sup><a href="#note1">[1]</a></sup> </td><td class="wiki"> Font description </td><td class="wiki"> Example: <code>Monospace Bold 14</code> </td><td class="wiki"> </td></tr>
-<tr><td class="wiki"> background-tint-color<sup><a href="#note2">[2]</a></sup> </td><td class="wiki"> Background tint colour </td><td class="wiki"> A standard name,  <i>#rgb </i> or  <i>#rrggbb </i> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> font-name </td><td class="wiki"> Font description </td><td class="wiki"> Example: <code>Monospace Bold 14</code> </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> background-tint-color<sup><a href="#note1">[1]</a></sup> </td><td class="wiki"> Background tint colour </td><td class="wiki"> A standard name,  <i>#rgb </i> or  <i>#rrggbb </i> </td><td class="wiki"> </td></tr>
 <tr><td class="wiki"> text-background-color </td><td class="wiki"> Text background colour </td><td class="wiki"> A standard name,  <i>#rgb </i> or  <i>#rrggbb </i> </td><td class="wiki"> </td></tr>
 <tr><td class="wiki"> text-foreground-color </td><td class="wiki"> Text foreground colour </td><td class="wiki"> A standard name,  <i>#rgb </i> or  <i>#rrggbb </i> </td><td class="wiki"> </td></tr>
 <tr><td class="wiki"> bold-foreground-color </td><td class="wiki"> Bold text foreground colour </td><td class="wiki"> A standard name,  <i>#rgb </i> or  <i>#rrggbb </i> </td><td class="wiki"> </td></tr>
@@ -164,7 +164,7 @@ A <a href="http://developer.gnome.org/vte/unstable/VteTerminal.html">VteTerminal
 <tr><td class="wiki"> hide </td><td class="wiki"> Hide widget </td><td class="wiki"> Shell variable name </td><td class="wiki"> </td></tr>
 <tr><td class="wiki"> grabfocus </td><td class="wiki"> Grab input focus </td><td class="wiki"> Shell variable name </td><td class="wiki"> </td></tr>
 <tr><td class="wiki"> refresh </td><td class="wiki"> Reload input data </td><td class="wiki"> Shell variable name </td><td class="wiki"> </td></tr>
-<tr><td class="wiki"> clear<sup><a href="#note3">[3]</a></sup> </td><td class="wiki"> Reset terminal and rerun command </td><td class="wiki"> Shell variable name </td><td class="wiki"> </td></tr>
+<tr><td class="wiki"> clear<sup><a href="#note2">[2]</a></sup> </td><td class="wiki"> Reset terminal and rerun command </td><td class="wiki"> Shell variable name </td><td class="wiki"> </td></tr>
 </table>
 
 <p>The following general functions can be performed by any widget capable of emitting signals:</p>
@@ -180,11 +180,9 @@ A <a href="http://developer.gnome.org/vte/unstable/VteTerminal.html">VteTerminal
 
 <h2> Notes </h2>
 
-<p><a name="note1"></a>1. There exists an equivalently named "<a href="http://developer.gnome.org/vte/unstable/VteTerminal.html#VteTerminal--font-desc">font-desc</a>" VTE property but it doesn't accept strings so it's converted by Gtkdialog.</p>
+<p><a name="note1"></a>1. There exists an equivalently named "<a href="http://developer.gnome.org/vte/unstable/VteTerminal.html#VteTerminal--background-tint-color">background-tint-color</a>" VTE property but it doesn't accept strings so it's converted by Gtkdialog.</p>
 
-<p><a name="note2"></a>2. There exists an equivalently named "<a href="http://developer.gnome.org/vte/unstable/VteTerminal.html#VteTerminal--background-tint-color">background-tint-color</a>" VTE property but it doesn't accept strings so it's converted by Gtkdialog.</p>
-
-<p><a name="note3"></a>3. Performing the "clear" action function upon this widget does not result in the emission of a "child-exited" signal, but it is possible to achieve the same result and receive a signal by killing the pid which is stored within the widget's variable -- for example if the widget's variable is named MYTERM then executing <i>kill -9 $MYTERM</i> from within your application's script would reset the terminal, rerun the command and emit a signal.</p>
+<p><a name="note2"></a>2. Performing the "clear" action function upon this widget does not result in the emission of a "child-exited" signal, but it is possible to achieve the same result and receive a signal by killing the pid which is stored within the widget's variable -- for example if the widget's variable is named MYTERM then executing <i>kill -9 $MYTERM</i> from within your application's script would reset the terminal, rerun the command and emit a signal.</p>
 
 <p>This is a non-mandatory widget that requires <a href="http://ftp.gnome.org/pub/gnome/sources/vte/">libvte</a> support be built into Gtkdialog at compile time.</p>
 
